--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,7 +2,8 @@
   "name": "web",
   "version": "0.0.0",
   "scripts": {
-    "build:tailwind": "tailwindcss build -i ./lib/styles/tailwind/input.css -o ./lib/styles/tailwind/output.css"
+    "build:tailwind": "tailwindcss build -i ./lib/styles/tailwind/input.css -o ./lib/styles/tailwind/output.css",
+    "create:widget:icon": "bash ./widgets/icons/create.sh"
   },
   "license": "MIT"
 }
