--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "dayjs": "^1.11.5",
     "detect-browser": "^5.3.0",
     "dotenv": "^16.0.1",
+    "formik": "^2.2.9",
+    "formik-mui": "^5.0.0-alpha.0",
     "framer-motion": "^8.5.0",
     "lodash": "^4.17.21",
     "lottie-web": "^5.10.1",
@@ -43,7 +45,8 @@
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.5",
     "tslib": "^2.3.0",
-    "type-fest": "^3.0.0"
+    "type-fest": "^3.0.0",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.13",
